common/local, Fix figure spacing

--- a/common/local.css
+++ b/common/local.css
@@ -374,6 +374,9 @@ details {
 */
 .leadin { color: #CC6600; font-style: italic; margin-right: 1em; font-size: 90%; }
 
+.auto {
+	margin: 1em 30% 1em 10%;
+	}
 .characterBox, .auxiliaryBox, .deprecatedBox, .otherBox, .archaicBox {
     border: 1px solid #eee; 
     padding: 8px;
@@ -381,6 +384,8 @@ details {
     background-color: #fffdf5;
     margin-left: 7.5%;
     border-radius: 8px;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 .auxiliaryBox {
 	background-color: snow;
@@ -426,7 +431,6 @@ details {
 
 
 
-
 .termref {
     border-bottom: 1px dotted teal;
     }
@@ -436,6 +440,8 @@ figure p {
 details figure {
     margin-right: 0;
     }
+
+
 
 
 
